--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   nginx:
     image: nginx:alpine
+    environment:
+      - VIRTUAL_HOST=pdf.10botics.com
     volumes:
       - ./:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
